--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -544,7 +544,7 @@ section,
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
-  min-height: 100vh;
+  min-height: auto;
   position: relative;
   padding: 80px 0;
   display: flex;
@@ -1272,4 +1272,44 @@ section,
 --------------------------------------------------------------*/
 .starter-section {
   /* Add your styles here */
+}
+
+/* -----tt--- */
+
+/* Extra Large Screens (Desktops / TV > 1400px) */
+@media (min-width: 1400px) {
+  .hero{
+    min-height: 80vh;
+  }
+}
+
+/* Large Screens (Laptops / Wide Monitors 1200px – 1399px) */
+@media (max-width: 1399px) and (min-width: 1200px) {
+  .hero{
+    min-height: 70vh;
+  }
+}
+
+/* Medium Screens (Small Laptops / Large Tablets 992px – 1199px) */
+@media (max-width: 1199px) and (min-width: 992px) {
+  .hero{
+    min-height: 40vh;
+  }
+}
+
+/* Small Screens (Tablets / iPads 768px – 991px) */
+@media (max-width: 991px) and (min-width: 768px) {
+  .hero{
+    min-height: 36vh;
+  }
+}
+
+/* Extra Small Screens (Mobiles < 768px) */
+@media (max-width: 767px) {
+  
+}
+
+/* Very Small Screens (Small Phones < 480px) */
+@media (max-width: 480px) {
+  
 }
